fpga/spartan3: add reverse bitstream mode
The Xilinx tools we use appear to give us a bitstream with the bits
reversed (compared to what the existing code expects) add a new
CONFIG_FPGA_REVERSE_BITSTREAM option which tells the spartan3 driver
to output the serial stream with the leftmost bit first.

Acked-by: Michal Simek <michal.simek@xilinx.com>
Signed-off-by: Chris Packham <judge.packham@gmail.com>
Series-changes: 2
- Collect ACK from Michal
Series-prefix: RFC
Series-version: 2
Cover-letter:
FPGA changes

I've re-ordered this series a little to avoid buildman issues.

I haven't touched all the boards that use these options. Hopefully
someone more familiar with the boards can build on top of these.
END

--- a/drivers/fpga/Kconfig
+++ b/drivers/fpga/Kconfig
@@ -35,6 +35,13 @@ config FPGA_VIRTEX2
 	help
 	  Enable FPGA driver for Xilinx Virtex2 devices.
 
+config FPGA_REVERSE_BITSTREAM
+	bool "Reverse bitstream when programming"
+	depends on FPGA_SPARTAN3
+	help
+	  Some Xilinx tools generate programs that need to be uploaded LSb
+	  first. Set this option if your fpga binary requires this.
+
 config FPGA_ALTERA
 	bool "Enable Altera FPGA drivers"
 	select FPGA
