--- a/configs/PMC440_defconfig
+++ b/configs/PMC440_defconfig
@@ -16,6 +16,9 @@ CONFIG_CMD_DHCP=y
 CONFIG_CMD_MII=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_FAT=y
+CONFIG_FPGA_XILINX=y
+CONFIG_FPGA_SPARTAN3=y
+CONFIG_FPGA_SPARTAN2=y
 CONFIG_SYS_NS16550=y
 CONFIG_USB=y
 CONFIG_USB_STORAGE=y
